--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -762,8 +762,8 @@
 - book: Cyphers and Masks
   resource: Gear
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Cyphers and Masks
   resource: Qualities
   source: The Outer Rim
