Add RotS vehicles

--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -3947,8 +3947,8 @@
 - book: Rise of the Separatists
   resource: Vehicles
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Rise of the Separatists
   resource: Weapon Attachments
   source: The Outer Rim
