--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -3932,8 +3932,8 @@
 - book: Rise of the Separatists
   resource: Starships
   source: The Outer Rim
-  entered: No
-  audited: No
+  entered: Yes
+  audited: Yes
 - book: Rise of the Separatists
   resource: Talents
   source: The Outer Rim
